<resources>
    <string name="app_name">Markets</string>
    <string name="j_p_morgan_markets_txt">J.P. Morgan Markets</string>
    <string name="offline_message">Offline: Last Updated</string>
    <string name="online_message">Connection Established</string>
    <string name="wrong_pdf_licence_message">Wrong PDF library license.</string>
    <string name="login_app_name_txt">Markets</string>
    <string name="login_user_name_txt">Username</string>
    <string name="login_password_txt">Password</string>
    <string name="login_privacy_txt">Privacy Policy</string>
    <string name="login_help_txt">NEED HELP?</string>
    <string name="login_log_in_txt">LOG IN</string>
    <string name="authenticating">Authenticating…be right back</string>
    <string name="alert">ALERT</string>
    <string name="divider">|</string>
    <string name="empty_text">No Data</string>
    <string name="retrieving_data">Loading…don\'t go anywhere</string>
    <string name="building_feed_text">Building your feed…</string>
    <string name="view_pdf">View Full Document</string>
    <string name="synopsis">Synopsis</string>
    <string name="analysts">Analysts</string>
    <string name="related">Related</string>
    <string name="new_stories">\u00A0New Articles.</string>
    <string name="edit_feed">Edit Feed</string>
    <string name="edit_research_feed">Edit your research feed</string>
    <string name="edit_research_feed_subtitle_txt">Your feed can contain as many topics as you want to follow. You can always make edits later.</string>
    <string name="edit_feed_msg">Are you sure you want leave without saving your changes?</string>
    <string name="remove_title_briefcase">Remove Feed</string>
    <string name="removed_from_briefcase_message">Feed removed from Briefcase</string>
    <string name="added_to_briefcase_message">Feed added to Briefcase</string>
    <string name="customize_feed">Customize your feed based on your interests</string>
    <string name="empty_body_header">No Summary Available</string>
    <string name="empty_body_detail">Please tap on View Full Document below</string>
    <string name="briefcase_items_add">Items added to Briefcase</string>
    <string name="action_settings">Settings</string>
    <string name="progres_dialog_text">Downloading PDF…</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_done">Done</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_share">Share</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_briefcase">Add To Breficase</string>
    <string name="menu_empty_briefcase">Empty Briefcase</string>
    <string name="menu_jumpto">JUMP TO …</string>
    <string name="rest_test">Test Rest Request Feature</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_add_watchlist">+WATCHLIST</string>
    <string name="menu_clear_all">Clear All</string>
    <string name="menu_remove">Remove</string>
    <string name="share_email_subjet">J.P. Morgan: %s</string>
    <string name="share_email_multiple_items_subjet">J.P. Morgan: %s research items have been shared with you</string>
    <string name="share_email_header" formatted="false">
<![CDATA[<body style="text-align:justify;">
        <p>From J.P. Morgan Markets:</p><b>%s</b></p>]]>
    </string>
    <string name="share_email_body" formatted="false">
<![CDATA[<body style="text-align:justify;">
        <b>%s</b></p><p>Published: %s</p><p>%s</p>]]>
    </string>
    <string name="share_email_body_with_document" formatted="false">
<![CDATA[<body style="text-align:justify;">
        <b>%s</b></p><p>Published: %s</p><p><a href=\"%s\"> Research DOC URL </a></p><p>%s</p>]]>
    </string>
    <string name="share_email_footer" formatted="false">
<![CDATA[ 
       <p>Sent from the J.P. Morgan Markets Android application.</p><p>Get access to JP Morgan Markets on the go by downloading the free app for Android (<a href=\"https://play.google.com/store\">Google Play</a>) or iPhone (<a href=\"http://store.apple.com/us\">Apple Store</a>).</p>]]>
    </string>
    <string name="analytics_text">Analytics</string>
    <string name="display_settings_text">Display Settings</string>
    <string name="search_text">Search</string>
    <string name="research_text">Research</string>
    <string name="following">My Feed</string>
    <string name="featured_text">Featured</string>
    <string name="commentary_text">Commentary</string>
    <string name="recentlyread_text">Recently Read</string>
    <string name="marketmonitor_text">Markets Monitors</string>
    <string name="monitor_text">Monitor</string>
    <string name="insigths">Insights</string>
    <string name="reference_text">Reference</string>
    <string name="briefcase_text">Briefcase</string>
    <string name="calendar">Calendar</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="indexes_text">Indexes</string>
    <string name="settings_text">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="display_notifications">Notifications</string>
    <string name="fx_txt">FX App</string>
    <string name="prime_brokerage_txt">Prime Brokerage App</string>
    <string name="logout_txt">Log Out</string>
    <string name="on_txt">On</string>
    <string name="off_txt">Off</string>
    <string name="info_txt">INFO</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="help_feedback_selection">Help &amp; Feedback</string>
    <string name="help_txt">Help</string>
    <string name="about_txt">About</string>
    <string name="terms_of_use_txt">Terms of Use</string>
    <string name="feedback_txt">Feedback</string>
    <string name="disclaimers_txt">Disclaimers</string>
    <string name="privacy_policy_txt">Privacy Policy</string>
    <string name="cookie_policy_txt">Cookie Policy</string>
    <string name="change_pass_txt">Change Password</string>
    <string name="privacy_dialog_txt">The Privacy Policy will open in Browser</string>
    <string name="about_html_txt"><![CDATA[<h3><b>J.P. Morgan Markets</b></h3>Find Your Edge. Trade with Intelligence<br/>Version: %s<br/><br/><b>Research</b><br/>J.P. Morgan Markets is an industry leader in global research, with more than 900 economists, analysts, strategists and research professionals generating research content spanning six continents, and corporate research covering more than 4,200 companies in the world<br/>\'92s developed and emerging markets countries across all industry groups.<br/><br/><b>Market Monitors</b><br/>Get access to interactive, real-time updates across the instruments you utilize the most, including J.P. Morgan proprietary indices. Retrieve, chart and analyze market data across assets and geographies.<br/><br/>J.P. Morgan clients may contact J.P. Morgan Markets Client Services to request access, technical support or to learn more]]></string>
    <string name="disclaimers_html_txt"><![CDATA[<b>Securitized Products</b><br/><br/>Disclaimer<br/>Prices and availability are indicative only and are subject to change without notice. This is for information only, not an offer or solicitation for the purchase or sale of any financial instrument, nor an official confirmation of terms. The information is believed to be reliable, but we do not warrant its completeness or accuracy. We may hold a position or act as a market maker in any financial instrument discussed herein. Clients should consult their own advisors regarding any tax, accounting or legal aspects of this information and execute transactions through a J.P. Morgan entity in their home jurisdiction unless governing law permits otherwise.<br/><br/><br/>Global Research<br/><br/>Disclaimer<br/>Important disclosures, including price charts, are available for all J.P. Morgan-covered companies by visiting <a href=\"https://jpmm.com/research/disclosures\">https://jpmm.com/research/disclosures</a>, calling <a href=\"+18004770406\">1-800-477-0406</a>, or e-mailing <a href=\"mailto:research.disclosure.inquiries@jpmorgan.com\">research.disclosure.inquiries@jpmorgan.com</a> with your request. For important disclosure for these companies, please call <a href=\"tel:+18004770406\">1-800-477-0406</a> or e-mail <a href=\"mailto:research.disclosure.inquiries@jpmorgan.com\">research.disclosure.inquiries@jpmorgan.com</a>]]></string>
    <string name="cookie_policy_html_txt"><![CDATA[IMPORTANT NOTICE: PLEASE READ CAREFULLY BEFORE USING THIS WEBSITE:<br/><br/>J.P. Morgan Markets and our mobile optimized version of this site known as J.P. Morgan Markets Mobile uses cookies to store information on your computer. This policy explains how we use cookies and may be amended, from time to time, without notice. To ensure that you are using this site with full and up-to-date information of how we use cookies please review this policy regularly as any amended policy will be updated on the site. By using this site you agree to the placement of cookies on your computer in accordance with the terms of this policy. If you do not wish to accept cookies from this site please either disable cookies or refrain from using this site.<br/><br/>1. What are Cookies?<br/>A cookie is a text-only string of information that a website transfers to the cookie file of the browser on your computer\'s hard disk so that the website can recognise you when you revisit and remember certain information about you. This can include which pages you have visited, choices you have made from menus, any specific information you have entered into forms and the time and date of your visit.<br/><br/>2. Types of Cookies<br/>There are two main types of cookies:<br/>&emsp;&emsp;&emsp;&emsp;&emsp;Session cookies: these are temporary cookies that expire at the end of a browser session; that is, when you leave the site. Session cookies allow the website to recognise you as you navigate between pages during a single browser session and allow you to use the website most efficiently. For example, session cookies enable a website to remember that a user has placed items in an online shopping basket.<br/>&emsp;&emsp;&emsp;&emsp;&emsp;Persistent cookies: in contrast to session cookies, persistent cookies are stored on your equipment between browsing sessions until expiry or deletion. They therefore enable the website to \\\"recognise\\\" you on your return, remember your preferences and tailor services to you.<br/><br/>3. Our use of Cookies<br/>We use session cookies on J.P. Morgan Markets and J.P. Morgan Markets Mobile to:<br/>&emsp;&emsp;&emsp;&emsp;&emsp;Help us maintain security and verify your details whilst you use the website as you navigate from page to page, which enables you to avoid having to re-enter your details each time you enter a new page.<br/><br/>4. Refusing Cookies<br/>Most browsers are initially set to accept cookies. However, you have the ability to disable cookies if you wish, generally through changing your internet software browsing settings. It may also be possible to configure your browser settings to enable acceptance of specific cookies or to notify you each time a new cookie is about to be stored on your computer enabling you to decide whether to accept or reject the cookie. To manage your use of cookies there are various resources available to you, for example the “Help” section on your browser may assist you. You can also disable or delete the stored data used by technology similar to cookies, such as Local Shared Objects or Flash cookies, by managing your browser’s “add-on settings” or visiting the website of its manufacturer. As our cookies allow you to access some of our website’s essential features we recommend that you leave cookies enabled, otherwise, if cookies are disabled, it may mean that you experience reduced functionality or will be prevented from using this site altogether.]]></string>
</resources>